# legal-luminary

./: .env.example  .gitignore  AGENTS.md  ARTICLE_INTEGRATION_REPORT.md  Design.md  Gemfile  LANGGRAPH_INTEGRATION_REPORT.md  PRD.md  PRESENTATION_ARTIFACTS.md  README.md  _config.yml  broken-links.json  conftest.py  decode_b64_bz2.py  generate_audit_headshots.py  generate_audit_sources.py  ll.code-workspace  package-lock.json  package.json  pipeline.py  playwright-smoke.config.js  progress.json  pyproject.toml  pytest.ini  requirements.txt  research_fcc_call_letters.py  robots.txt  run_doctor_tests.py  run_notary_finder.py  sitemap.xml  state.py  tasks.json  tasks_from_test_cases.json  test_pdf_extraction.py
.claude-plugin/: plugin.json
.ralph/: agent_embeddings.json  last_loop_error.txt
Forms_for_Personal_Use/: Disputes.rtf  Form1.rtf  Form10.rtf  Form11.rtf  Form12.rtf  Form13.rtf  Form14.rtf  Form15.rtf  Form16.rtf  Form17.rtf  Form19.rtf  Form2.rtf  Form20.rtf  Form21.rtf  Form22.rtf  Form23.rtf  Form24.rtf  Form25.rtf  Form26.rtf  Form27.rtf  Form28.rtf  Form29.rtf  Form3.rtf  Form30.rtf  Form31.rtf  Form32.rtf  Form33.rtf  Form34.rtf  Form35.rtf  Form36.rtf  Form37.rtf  Form38.rtf  Form39.rtf  Form4.rtf  Form40.rtf  Form41.rtf  Form42.rtf  Form43.rtf  Form44.rtf  Form45.rtf  (+62 more)
_candidates/: beverly_ann_williams.md  c_cochran.md  candidates.css  candidates.yml  charles_chuck_kimble.md  chet_southworth.md  christy_wilbanks.md  david_bass.md  debbie_nash-king.md  delsina_west.md  dominic_quoc_vo.md  index.md  john_crow_miller.md  jose_segarra.md  joseph_solomon.md  (+11 more)
(+820 files in other folders)
